Agregado utilidad de rutas y cambiado las rutas de header, footer, layout y demas q daban error al momento de navegar por todo el portafolio personal

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "@styles/*": ["src/styles/*"],
       "@types/*": ["src/types/*"],
       "@types": ["src/types/index.ts"],
-      "@data/*": ["@data/*"]
+      "@data/*": ["@data/*"],
+      "@utils/*": ["src/utils/*"]
     }
   },
   "include": ["src/**/*", "astro.config.mjs"],
