--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "astro": "^5.6.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
     "zod": "^3.24.2"
   }
 }
